Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,42 +34,56 @@
 <h3>
 <a id="main-features-" class="anchor" href="#main-features-" aria-hidden="true"><span class="octicon octicon-link"></span></a>Main Features ##:</h3>
 
-<p>Client 
-• One to one Chat. 
-• Group chat and with the ability of choosing a name for it. 
-• Send a file to a specific friend. 
-• Send an image to a specific friend. 
-• You can add a new friend with his/her email. 
-• You can send a nudge for your friend.
-Server
- • Show statics about online and offline users 
-• Can send announcement to all online user as a text message. 
-• Send an image as announcement to appear in client application. 
-• You can stop the server anytime you wish.</p>
+<h2>
+<a id="client" class="anchor" href="#client" aria-hidden="true"><span class="octicon octicon-link"></span></a>Client</h2>
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<p>• One to one Chat.<br>
+• Group chat and with the ability of choosing a name for it.<br>
+• Send a file to a specific friend.<br>
+• Send an image to a specific friend.<br>
+• You can add a new friend with his/her email.<br>
+• You can send a nudge for your friend.  </p>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<h2>
+<a id="server" class="anchor" href="#server" aria-hidden="true"><span class="octicon octicon-link"></span></a>Server</h2>
+
+<p>• Show statics about online and offline users<br>
+• Can send announcement to all online user as a text message.<br>
+• Send an image as announcement to appear in client application.<br>
+• You can stop the server anytime you wish.  </p>
+
+<hr>
 
 <h2>
 <a id="group-names" class="anchor" href="#group-names" aria-hidden="true"><span class="octicon octicon-link"></span></a>Group Names</h2>
 
-<p>1) Mohamed Atef Mohamed Ahmed. <a href="mailto:atefwahab@gmail.com">atefwahab@gmail.com</a></p>
+<p>1) Mohamed Atef Mohamed Ahmed.<br>
+<a href="mailto:atefwahab@gmail.com">atefwahab@gmail.com</a></p>
 
-<p>2) Eman Mohamed Kamal Hassan. <a href="mailto:EmanKamal227@hotmail.com">EmanKamal227@hotmail.com</a></p>
+<hr>
 
-<p>3) Nihal Hassan Mohamed Mohamed Khedr. <a href="mailto:nihal.hassan209@gmail.com">nihal.hassan209@gmail.com</a></p>
+<p>2) Eman Mohamed Kamal Hassan.<br>
+<a href="mailto:EmanKamal227@hotmail.com">EmanKamal227@hotmail.com</a></p>
 
-<p>4) Safaa Badr Mohammed Abo Koll. <a href="mailto:eng.safaa.badr92@gmail.com">eng.safaa.badr92@gmail.com</a></p>
+<hr>
+
+<p>3) Nihal Hassan Mohamed Mohamed Khedr.<br>
+<a href="mailto:nihal.hassan209@gmail.com">nihal.hassan209@gmail.com</a></p>
+
+<hr>
+
+<p>4) Safaa Badr Mohammed Abo Koll.<br>
+<a href="mailto:eng.safaa.badr92@gmail.com">eng.safaa.badr92@gmail.com</a></p>
+
+<hr>
 
 <h2>
 <a id="track" class="anchor" href="#track" aria-hidden="true"><span class="octicon octicon-link"></span></a>Track</h2>
 
-<p>ITI Ismailia 
-Java department 
-web and mobile application development 
-intake 36</p>
+<p>ITI Ismailia<br>
+Java department<br>
+web and mobile application development<br>
+intake 36  </p>
         </section>
 
         <aside id="sidebar">
